--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,7 @@ body {
 }
 
 h1 {
-  font-size: 2.5rem;
+  font-size: 4.5rem;
   color: var(--color-primary);
   margin-bottom: 20px;
 }
@@ -43,45 +43,15 @@ h3 {
   padding: 20px;
   max-width: 400px;
   width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .responsive-img {
   max-width: 100%;
   height: auto;
   margin-bottom: 20px;
-}
-
-input[type="text"],
-input[type="number"] {
-  padding: 10px;
-  margin: 10px 0;
-  h1 {
-    font-size: 2.5rem;
-    color: var(--color-primary);
-    margin-bottom: 20px;
-  }
-
-  h3 {
-    font-size: 1.25rem;
-    color: var(--color-primary);
-    margin-bottom: 10px;
-  }
-}
-
-.container {
-  background-color: var(--color-white);
-  border-radius: 8px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  padding: 20px;
-  max-width: 400px;
-  width: 100%;
-}
-
-.responsive-img {
-  max-width: 100%;
-  height: auto;
-  margin-bottom: 20px;
-
 }
 
 input[type="text"],
@@ -99,6 +69,7 @@ button {
   font-size: 1.125rem;
   cursor: pointer;
   transition: background-color 0.3s ease;
+  width: 100%; /* Botões ocupam toda a largura disponível */
 }
 
 button:disabled {
@@ -117,6 +88,7 @@ ul {
   max-height: 200px;
   overflow-y: auto;
 }
+
 ul li {
   background-color: var(--color-tertiary);
   margin: 5px 0;
@@ -141,5 +113,9 @@ ul li {
 
   button {
     font-size: 1rem;
+  }
+
+  .container {
+    padding: 10px; /* Reduzir padding em telas menores */
   }
 }
